--- a/chapter10.tex
+++ b/chapter10.tex
@@ -30,4 +30,4 @@ While integration with regulation markets is definitely the most notable improve
 
 In addition, the most realistic future work comes in the form of integrating and deploying the optimization system in the growing number of new hybrid installations having energy storage assets, which are being continuously incorporated into the grid. Precisely and as has been previously detailed, battery energy storage systems are in continuous growth and, in fact, during the development process new storage systems have even become available.
 
-It should be noted that plans have been made to continue the accomplished efforts within the relevant market operator, with the aim of guaranteeing the continuation of its life cycle, in a way that its maintenance and deployment continue under a new team's supervision.
+It should be noted that efforts have been made for the maintenance and enhancement of the relevant work from the corresponding market operator, with the aim of guaranteeing the continuation of its life cycle, in a way that its maintenance and deployment continue under a new team's supervision.
