--- a/chapter8.tex
+++ b/chapter8.tex
@@ -6,7 +6,7 @@
 \section{Conclusiones}%
 \label{makereference8.1}
 
-En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones de la entidad energética pertinente en la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto.
+En conclusión, se ha diseñado, desarrollado, desplegado y validado satisfactoriamente un sistema de optimización de baterías a lo largo de múltiples instalaciones vinculadas a la entidad energética pertinente en la península, el cual mueve docenas de megavatios hora al día y genera millones de euros de ingresos esperados al año mediante el ciclado de \glspl{bess}, satisfaciendo así el objetivo principal propuesto.
 
 % TODO
 \begin{figure}
@@ -39,4 +39,4 @@ Si bien la integración con los mercados de regulación es definitivamente la me
 
 Junto a ello, el trabajo futuro más realista viene dado en forma de la implantación del sistema de optimización desarrollado en el creciente número de nuevas instalaciones híbridas con activos energéticos de almacenamiento en incorporación continua a la red. Como ya se ha detallado anteriormente, los \glspl{bess}, al ser todavía una tecnología no tan ampliamente establecida, se encuentran en continuo crecimiento. De hecho, incluso durante el proceso de desarrollo se hizo disponible un nuevo sistema de almacenamiento.
 
-Cabe destacar que se han realizado planes para continuar con el esfuerzo del trabajo desarrollado dentro de la entidad energética pertinente, con el objetivo de garantizar la continuación de su ciclo de vida, de tal forma que su operación y despliegue prosigan bajo la supervisión de un equipo diferente.
+Cabe destacar que se han esfuerzos para el mantenimiento y mejora del trabajo desarrollado dentro de la entidad energética pertinente, con el objetivo de garantizar la continuación de su ciclo de vida, de tal forma que su operación y despliegue prosigan bajo la supervisión de un equipo diferente.
