--- a/resumen.tex
+++ b/resumen.tex
@@ -8,7 +8,7 @@
 
 \vspace{1cm}
 
-En respuesta a la creciente adopción de los sistemas de almacenamiento de energía en baterías y la ausencia de soluciones actualmente en producción principalmente centradas en configuraciones topológicas híbridas, se define el diseño, desarrollo, despliegue y validación de \textsc{Optibat}, un sistema integral para la automatización del arbitraje en el mercado eléctrico. El sistema busca maximizar la rentabilidad económica comprando y vendiendo energía en los mercados spot mediante el control del ciclado de las baterías. Para ello, se integran datos operacionales en tiempo real de los activos energéticos con la información del entorno del operador del mercado y operador del sistema, empleando un modelo de programación lineal de enteros mixta para determinar la estrategia óptima de carga y descarga e interactuando directamente con los agentes de mercado y operadores de telecontrol. Desplegado con éxito en múltiples instalaciones a gran escala de la entidad energética pertinente , \textsc{Optibat} gestiona docenas de megavatios hora diarios y genera millones de euros de ingresos anuales previstos. Los resultados experimentales demuestran que las topologías híbridas aplicadas son significativamente más rentables que las aisladas, destacando el sistema por su capacidad para aumentar el aprovechamiento de la generación energética. De esta forma, el proyecto aporta una solución robusta y escalable que valida el caso de negocio de las baterías, permitiendo su integración eficaz como activos óptimos y fiables en el mercado eléctrico.
+En respuesta a la creciente adopción de los sistemas de almacenamiento de energía en baterías y la ausencia de soluciones actualmente en producción principalmente centradas en configuraciones topológicas híbridas, se define el diseño, desarrollo, despliegue y validación de \textsc{Optibat}, un sistema integral para la automatización del arbitraje de baterías en el mercado eléctrico. El sistema busca maximizar la rentabilidad económica comprando y vendiendo energía en los mercados spot mediante el control del ciclado de las baterías. Para ello, se integran datos operacionales en tiempo real de los activos energéticos con la información del entorno del operador del mercado y sistema, empleando un modelo de programación lineal de enteros mixto para determinar la estrategia óptima de carga y descarga e interactuando directamente con los agentes de mercado y operadores de telecontrol. Desplegado con éxito en múltiples instalaciones a gran escala vinculadas a la entidad energética pertinente, \textsc{Optibat} gestiona docenas de megavatios hora diarios y genera millones de euros de ingresos anuales previstos. Los resultados experimentales demuestran que las topologías híbridas aplicadas son significativamente más rentables que las aisladas, destacando el sistema por su capacidad para aumentar el aprovechamiento de la generación energética. De esta forma, el proyecto aporta una solución robusta y escalable que valida el caso de negocio de las baterías, permitiendo su integración eficaz como activos óptimos y fiables en el mercado eléctrico.
 
 \vspace{1cm}
 
@@ -30,7 +30,7 @@ Internet de las cosas industrial, sistema de almacenamiento de energía en bater
 
 \vspace{1cm}
 
-In response to the increasing adoption of battery energy storage systems and the current absence of production solutions primarily focused on hybrid topological configurations, the design, development, deployment, and validation of \textsc{Optibat} is proposed, a comprehensive system for automating electricity market arbitrage. The system aims to maximize economic profitability by buying and selling energy on spot markets through battery cycling. To achieve this, the system integrates real-time operational data from energy assets with information from the environments of the market and system operators. It uses a mixed-integer linear programming model to determine the optimal charging and discharging strategy and is directly aimed at market agents and telecommunications operators. Successfully deployed in multiple large scale installations, \textsc{Optibat} manages dozens of megawatt hours daily and generates millions of euros in projected annual revenue. Experimental results demonstrate that the applied hybrid topologies are significantly more profitable than standalone ones, highlighting the system's ability to improve the efficiency of energy generation. This way, the project provides a robust and scalable solution that validates the business case for batteries, enabling their effective integration as optimal and reliable assets in the electricity market.
+In response to the increasing adoption of battery energy storage systems and the current absence of production solutions primarily focused on hybrid topological configurations, the design, development, deployment, and validation of \textsc{Optibat} is proposed, a comprehensive system for automating electricity market arbitrage. The system aims to maximize economic profitability by buying and selling energy on spot markets through battery cycling. To achieve this, the system integrates real time operational data from energy assets with information from the environment of the market and system operators. It uses a mixed-integer linear programming model to determine the optimal charging and discharging strategy and is directly aimed at market agents and telecommunications operators. Successfully deployed in multiple large scale installations, \textsc{Optibat} manages dozens of megawatt hours daily and generates millions of euros in projected annual revenue. Experimental results demonstrate that the applied hybrid topologies are significantly more profitable than standalone ones, highlighting the system's ability to improve the efficiency of energy generation. This way, the project provides a robust and scalable solution that validates the business case for batteries, enabling their effective integration as optimal and reliable assets in the electricity market.
 
 \vspace{1cm}
 
